# gnoma

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: experiment.yaml  preprocess.yaml
data/hallmarks/: hallmark_gene_sets.json
data/interventions/: ontology_v1.json
data/rules/: mechanistic_rules_v1.json
reports/: eval_ppo_v1.json  eval_ppo_v2.json  eval_ppo_v2_stochastic.json
scripts/: dataset_inventory.py  download_blood_subset.py  download_perturbseq.py  eval_diverse.py  run_preprocess.py  train_encoder.py  train_hallmarks.py  train_ppo.py  train_transition.py  verify_census.py  visualize_latent.py
src/gnoma/: __init__.py  tracking.py
src/gnoma/data/: census.py  preprocess.py
src/gnoma/env/: aging_env.py
src/gnoma/eval/: evaluate.py
src/gnoma/interventions/: action_space.py  schema.py
src/gnoma/models/: aging_clock.py  encoder.py  hallmark_heads.py
src/gnoma/reward/: reward_fn.py
src/gnoma/simulator/: rule_kernel.py  transition_model.py
tests/: test_action_space.py  test_aging_clock.py  test_preprocess.py  test_reward.py  test_rule_kernel.py  test_schema.py  test_world_model.py
